--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             cursor: pointer;
             transition: all 0.3s ease;
             background: white;
+            margin: 5px;
         }
         .option-card:hover {
             border-color: #3498db;
